# project-overwatch-scanner

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.json  configuration.json.example  docker-compose.yml  project-overwatch-scanner.service
.github/workflows/: docker-image.yml
src/: discord.rs  main.rs  pocketbase.rs  sql.rs
