[package]
name = "project-overwatch-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "*", features = ["blocking"] }
sqlx = { version = "0.6", features = [ "mysql","runtime-tokio-rustls" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "*"
serenity = "*"
dotenv = "*"
pocketbase-sdk = "*"
