[package]
name = "project-overwatch-scanner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "*", features = ["blocking"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
anyhow = "*"
serenity = "*"
dotenv = "*"
pocketbase-sdk = "0.0.8"
rusqlite = { version = "0.29.0", features = ["bundled"] }
